Implement resources to html index file and add copyright symbol ASCII code in the footer

--- a/index.html
+++ b/index.html
@@ -14,22 +14,21 @@
   </header>
   <main>
     <section>
-      <img src="" alt="">
-      <video src=""></video>
+      <video src="./resources/excursion.mp4" autoplay loop></video>
     </section>
     <section>
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and reccomends new points of interest around you</p>
-      <img src="" alt="">
+      <img src="./resources/camp.webp" alt="">
     </section>
     <section>
-      <img src="" alt="">
+      <img src="./resources/phone.webp" alt="">
       <h2>Coming Soon for iPhone and Android</h2>
       <a href="#">Download Excursion (Coming Soon)</a>
     </section>
   </main>
   <footer>
-    <p>:symbol Excursion</p>
+    <p>	&#169; Excursion</p>
   </footer>
 </body>
 </html>
