Solve a bug that doesn't let the video autoplay when opening the page adding mute to the video tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <main>
     <section>
-      <video src="./resources/excursion.mp4" autoplay loop></video>
+      <video src="./resources/excursion.mp4" autoplay muted></video>
     </section>
     <section>
       <h2>Your personal travel guide</h2>
