Add a class camp for a marging bottom

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section>
       <video src="./resources/excursion.mp4" autoplay muted></video>
     </section>
-    <section>
+    <section class="camp">
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and reccomends new points of interest around you</p>
       <img src="./resources/camp.webp" alt="">
